--- a/style.css
+++ b/style.css
@@ -16,3 +16,11 @@ h1 {
     font-family: 'Courier New', Courier, monospace;
     font-size: 3em;
 }
+#ball img {
+    width: 15%;
+    height: auto;
+}
+#myAnimation img {
+    width: 10%;
+    height: auto;
+}
